--- a/deny.toml
+++ b/deny.toml
@@ -1,3 +1,4 @@
+[graph]
 targets = [
     { triple = "x86_64-pc-windows-msvc" },
     { triple = "x86_64-unknown-linux-gnu" },
@@ -5,19 +6,12 @@ targets = [
 ]
 
 [advisories]
-vulnerability = "deny"
-unmaintained = "deny"
-notice = "deny"
 ignore = []
 
 [licenses]
-unlicensed = "deny"
-copyleft = "deny"
-allow-osi-fsf-free = "neither"
 confidence-threshold = 0.93
-default = "deny"
 private = { ignore = true }
-allow = [ "Apache-2.0", "MIT", "Unlicense", "Unicode-DFS-2016", "BSD-3-Clause", "CC0-1.0" ]
+allow = [ "Apache-2.0", "MIT", "Unlicense", "BSD-3-Clause", "CC0-1.0", "Unicode-3.0", "BSL-1.0" ]
 exceptions = []
 
 [bans]
